--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -36,23 +36,22 @@
               <div class="input-group">
                 Task <br>
                 <input type="checkbox" name="task" value="estimation" checked disabled> Spec 산정 및 견적 산정 <br>
-                <input type="hidden" name="task" value="견적산정" checked>
+                <input type="hidden" name="task" value="1.견적산정" checked>
                 <!--disabled는 체크박스 modify못하게 하지만 동시에 post때 값 무시, 그래서 redundant하지만 hidden type 추가-->
                 <input type="checkbox" name="task" value="build-plan" checked disabled> 구축 계획 <br>
-                <input type="hidden" name="task" value="구축계획" checked>
-                <input type="checkbox" name="task" value="kickoff"> Kick-off Meeting <br>
-                <input type="checkbox" name="task" value="작업요청"> 작업 요청서 작성 및 승인 <br>
+                <input type="hidden" name="task" value="2.구축계획" checked>
+                <input type="checkbox" name="task" value="3.작업요청"> 작업 요청서 작성 및 승인 <br>
                 <input type="checkbox" name="task" value="equip-delivery" checked disabled> 장비 납품 <br>
-                <input type="hidden" name="task" value="납품" checked>
-                <input type="checkbox" name="task" value="IP할당"> 네트워크 할당 요청, 수령 및 공사 진행 <br>
+                <input type="hidden" name="task" value="4.납품" checked>
+                <input type="checkbox" name="task" value="5.IP할당"> 네트워크 할당 요청, 수령 및 공사 진행 <br>
                 <input type="checkbox" name="task" value="at" checked disabled> 인수시험 절차서 작성 및 검토 <br>
-                <input type="hidden" name="task" value="인수시험" checked>
+                <input type="hidden" name="task" value="6.인수시험" checked>
                 <input type="checkbox" name="task" value="at-check" checked disabled> 인수시험/개통 확인<br>
-                <input type="hidden" name="task" value="인수시험/개통확인" checked>
+                <input type="hidden" name="task" value="7.인수시험/개통확인" checked>
                 <!--input type="checkbox" name="task" value="open" checked> 개통<br-->
                 <input type="checkbox" name="task" value="final-acceptance" checked disabled> 최종 인수 <br>
-                <input type="hidden" name="task" value="최종인수" checked>
-                <input type="checkbox" name="task" value="시설현황"> 시설현황 입력
+                <input type="hidden" name="task" value="8.최종인수" checked>
+                <input type="checkbox" name="task" value="9.시설현황"> 시설현황 입력
                 <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
               </div><!-- /input-group -->
               <div class="form-group">
