--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -60,12 +60,16 @@
               </div>
                 <div class="input-group">
                   Task <br>
-                  
-                <ul>
-                  <% for(var i=0; i<project[0].task.length; i++) { %>
 
+                <ul>
+                  <% optiontasks=["작업요청","IP할당","시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
+                   <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) optiontasks.splice(j, 1); } %>
                    <li> <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> </li>
                    <!-- if문으로 active 경우 처리해줄것-->
+                  <% } %>
+
+                  <% for(var k=0; k<optiontasks.lengh; k++) { %>
+                    <li> <a href=""> <%= optiontasks[k] %> </a> </li>
                   <% } %>
                 </ul>
 
