--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -68,7 +68,7 @@
                    <!-- if문으로 active 경우 처리해줄것-->
                   <% } %>
 
-                  <% for(var k=0; k<optiontasks.lengh; k++) { %>
+                  <% for(var k=0; k<optiontasks.length; k++) { %>
                     <li> <a href=""> <%= optiontasks[k] %> </a> </li>
                   <% } %>
                 </ul>
