--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -69,7 +69,7 @@
                   <% } %>
 
                   <% for(var k=0; k<optiontasks.length; k++) { %>
-                    <li> <a href=""> <%= optiontasks[k] %> </a> </li>
+                    <li> <a href=""> <%= optiontasks[k] %> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span> </a> </li>
                   <% } %>
                 </ul>
 
