--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -35,6 +35,25 @@
   		  });
       }
     }
+
+
+    function removeTask(pid, tid){
+      var result = confirm("이 작업에 등록된 산출물이 있을 수 있습니다. 정말 삭제하시겠습니까?");
+      if(result)
+      {
+        $.ajax({
+  			  url:"/delete/"+pid+"/"+tid,
+  			  type:"delete",
+  			  dataType:"json",
+  			  success: function(result){
+            location.href="../update/"+pid;
+  			  },
+  			  error:function(request,status,error){
+  		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+  			  }
+  		  });
+      }
+    }
   </script>
 
   </head>
@@ -63,13 +82,19 @@
 
                 <ul>
                   <% optiontasks=["작업요청","IP할당","시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
-                   <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <li> <%= optiontasks[j] %> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span> </li> <% optiontasks.splice(j, 1); }} %>
-                   <li> <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> </li>
-                   <!-- if문으로 active 경우 처리해줄것-->
+                   <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <li> <%= optiontasks[j] %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button> </li> <% optiontasks.splice(j, 1); }} %>
+                   <li> 
+                     <% if(!optiontasks.includes(project[0].task[i].tname.substr(2)) { %>
+                       <a href=""> <%= project[0].task[i].tname.substr(2) %> </a>
+                     <% }) %> 
+                     
+                   </li>
+                   <!-- if문으로 active 경우 처리해줄것 -->
+                   <!--현재 모든 태스크 돌면서 옵션인거 한번 더 출력해서 옆에 마이너스 붙임. redundant-->
                   <% } %>
 
                   <% for(var k=0; k<optiontasks.length; k++) { %>
-                    <li> <a href="">  <%= optiontasks[k] %>  <a href=""> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span> </a> </li>
+                    <li> <a href="">  <%= optiontasks[k] %> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span> </a> </li>
                   <% } %>
                 </ul>
 
