--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -82,12 +82,9 @@
 
                 <ul>
                   <% optiontasks=["작업요청","IP할당","시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
-                   <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <li> <%= optiontasks[j] %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button> </li> <% optiontasks.splice(j, 1); }} %>
-                   <li> 
-                     <% if(!optiontasks.includes(project[0].task[i].tname.substr(2)) { %>
-                       <a href=""> <%= project[0].task[i].tname.substr(2) %> </a>
-                     <% }) %> 
-                     
+                   
+                   <li>
+                     <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button>  <% optiontasks.splice(j, 1); }}%>
                    </li>
                    <!-- if문으로 active 경우 처리해줄것 -->
                    <!--현재 모든 태스크 돌면서 옵션인거 한번 더 출력해서 옆에 마이너스 붙임. redundant-->
