--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/common/css/style.css">
 
-     <script>
+    <script>
     function removeProj(id){
       var result = confirm("정말 삭제하시겠습니까?");
       if(result)
@@ -36,6 +36,22 @@
       }
     }
 
+     function addTask(pid, tname) {
+       var result = confirm(tname+" 추가하시겠습니까?");
+       if(result){
+         $.ajax({
+  			  url:"/"+pid+"/"+tname,
+  			  type:"post",
+  			  dataType:"json",
+  			  success: function(result){
+            location.href="../update/"+pid;
+  			  },
+  			  error:function(request,status,error){
+  		       console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+  			  }
+  		  });
+       }
+     }
 
     function removeTask(pid, tid){
       var result = confirm("이 작업에 등록된 산출물이 있을 수 있습니다. 정말 삭제하시겠습니까?");
@@ -82,16 +98,15 @@
 
                 <ul>
                   <% optiontasks=["작업요청","IP할당","시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
-                   
+
                    <li>
                      <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button>  <% optiontasks.splice(j, 1); }}%>
                    </li>
                    <!-- if문으로 active 경우 처리해줄것 -->
-                   <!--현재 모든 태스크 돌면서 옵션인거 한번 더 출력해서 옆에 마이너스 붙임. redundant-->
                   <% } %>
 
                   <% for(var k=0; k<optiontasks.length; k++) { %>
-                    <li> <a href="">  <%= optiontasks[k] %> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span> </a> </li>
+                    <li>  <%= optiontasks[k] %> <button id="<%=project[0]._id %>" name="<%=optiontasks[k] %>" onclick="addTask(this.id, this.name)"> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span></button> </li>
                   <% } %>
                 </ul>
 
@@ -101,7 +116,6 @@
 
               </div>
               <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
-
             </form>
 
           </div>
