--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -37,7 +37,7 @@
     }
 
      function addTask(pid, tname) {
-       var result = confirm(tname+" 추가하시겠습니까?");
+       var result = confirm(tname+"을(를) 추가하시겠습니까?");
        if(result){
          $.ajax({
   			  url:"/"+pid+"/"+tname,
@@ -93,6 +93,12 @@
                  <label class="sr-only" for="form-password">프로젝트설명</label>
                    설명: <input type="text" name="pdesc" value="<%= project[0].pdesc %>" class="form-projectdesc form-control" id="pdesc">
               </div>
+
+              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
+            </form>
+
+            <form role="form" action="/<%=project[0]._id %>/<%=project[0].t %> " method="post" class="form-newproject">
+
                 <div class="input-group">
                   Task <br>
 
@@ -106,7 +112,9 @@
                   <% } %>
 
                   <% for(var k=0; k<optiontasks.length; k++) { %>
-                    <li>  <%= optiontasks[k] %> <button id="<%=project[0]._id %>" name="<%=optiontasks[k] %>" onclick="addTask(this.id, this.name)"> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span></button> </li>
+                    <li>  <%= optiontasks[k] %> <!--button id="<%=project[0]._id %>" name="<%=optiontasks[k] %>" onclick="addTask(this.id, this.name)"> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span></button-->
+                      <button type="submit"> 추가 </button>
+                    </li>
                   <% } %>
                 </ul>
 
@@ -115,7 +123,7 @@
               <div class="form-group">
 
               </div>
-              <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
+
             </form>
 
           </div>
