--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -36,6 +36,7 @@
       }
     }
 
+/*
      function addTask(pid, tname) {
        var result = confirm(tname+"을(를) 추가하시겠습니까?");
        if(result){
@@ -52,6 +53,7 @@
   		  });
        }
      }
+*/
 
     function removeTask(pid, tid){
       var result = confirm("이 작업에 등록된 산출물이 있을 수 있습니다. 정말 삭제하시겠습니까?");
@@ -97,33 +99,29 @@
               <button type="submit" class="btn" style="margin:auto; display:inline;"> 수정 </button> <button type='button' id="<%=project[0]._id %>" class="btn" style="display:inline;" onclick="removeProj(this.id)"> 프로젝트 삭제</button>
             </form>
 
-            <form role="form" action="/<%=project[0]._id %>/<%=project[0].t %> " method="post" class="form-newproject">
+            <form role="form" action="/<%=project[0]._id %>/taskadded %>" method="post" class="form-newproject">
 
                 <div class="input-group">
                   Task <br>
 
                 <ul>
-                  <% optiontasks=["작업요청","IP할당","시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
+                  <% optiontasks=["3.작업요청","5.IP할당","9.시설현황"]; for(var i=0; i<project[0].task.length; i++) { %>
 
                    <li>
-                     <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname.substr(2)) { %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button>  <% optiontasks.splice(j, 1); }}%>
+                     <a href=""> <%= project[0].task[i].tname.substr(2) %> </a> <% for(var j=0; j<3; j++) { if(optiontasks[j] == project[0].task[i].tname) { %> <button name="<%=project[0]._id %>" id="<%=project[0].task[i]._id %>" onclick="removeTask(this.name, this.id)"> <span class="glyphicon glyphicon-minus" aria-hidden="true" > </span></button>  <% optiontasks.splice(j, 1); }}%>
                    </li>
                    <!-- if문으로 active 경우 처리해줄것 -->
                   <% } %>
 
                   <% for(var k=0; k<optiontasks.length; k++) { %>
-                    <li>  <%= optiontasks[k] %> <!--button id="<%=project[0]._id %>" name="<%=optiontasks[k] %>" onclick="addTask(this.id, this.name)"> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span></button-->
-                      <button type="submit"> 추가 </button>
-                    </li>
+                    <input type="checkbox" name="task" value="<%= optiontasks[k] %>" > <%= optiontasks[k].substr(2) %>
                   <% } %>
                 </ul>
-
                   <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
                 </div><!-- /input-group -->
               <div class="form-group">
-
               </div>
-
+              <button type="submit"> 태스크 수정 </button>
             </form>
 
           </div>
