--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -118,7 +118,7 @@
 
               <div class="form-group">
                 <% for(var k=0; k<optiontasks.length; k++) { %>
-                  <input type="checkbox" name="task" value="<%= optiontasks[k] %>" > <%= optiontasks[k].substr(2) %>
+                  <input type="checkbox" name="task" value="<%= optiontasks[k] %>" > <%= optiontasks[k].substr(2) %> <br>
                 <% } %>
               </div>
               <button type="submit"> 태스크 수정 </button>
