--- a/views/updateproject.ejs
+++ b/views/updateproject.ejs
@@ -36,7 +36,7 @@
       }
     }
 
-/*
+
      function addTask(pid, tname) {
        var result = confirm(tname+"을(를) 추가하시겠습니까?");
        if(result){
@@ -53,14 +53,14 @@
   		  });
        }
      }
-*/
+
 
     function removeTask(pid, tid){
       var result = confirm("이 작업에 등록된 산출물이 있을 수 있습니다. 정말 삭제하시겠습니까?");
       if(result)
       {
         $.ajax({
-  			  url:"/delete/"+pid+"/"+tid,
+  			  url:"/"+pid+"/"+tid,
   			  type:"delete",
   			  dataType:"json",
   			  success: function(result){
@@ -111,18 +111,17 @@
                    </li>
                    <!-- if문으로 active 경우 처리해줄것 -->
                   <% } %>
+
+                  <% for(var k=0; k<optiontasks.length; k++) { %> <form role="form" action="/taskadded/<%=project[0]._id %>" method="post"> <li> <input type="hidden" name="task" value="<%=optiontasks[k]%>"> <%= optiontasks[k].substr(2) %> <button type="submit"> <span class="glyphicon glyphicon-plus" aria-hidden="true" > </span> </button> </li> </form> <% } %>
+
                 </ul>
+
                   <!--input type="checkbox" name="task" value="bp" checked> 인력/BP 관리<br-->
                 </div><!-- /input-group -->
-            <form role="form" action="/<%=project[0]._id %>/taskadded %>" method="post" class="form-newproject">
 
               <div class="form-group">
-                <% for(var k=0; k<optiontasks.length; k++) { %>
-                  <input type="checkbox" name="task" value="<%= optiontasks[k] %>" > <%= optiontasks[k].substr(2) %> <br>
-                <% } %>
+
               </div>
-              <button type="submit"> 태스크 수정 </button>
-            </form>
 
           </div>
         </div>
