--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -51,7 +51,7 @@
            </ul>
            <ul class="nav navbar-nav navbar-right">
              <% if(name==='Admin') { %>
-               <li <% if(page_name ==='admin') { %> class="active" <% } %>> <a href="adminpage"> 관리 </a> </li>
+               <li <% if(page_name ==='admin') { %> class="active" <% } %>> <a href="admin"> 관리 </a> </li>
              <% } %>
              <li <% if (page_name === 'mypage') { %>class="active" <% } %>> <a href=""> <%=name%>님 </a> </li>
              <li> <a href="/logout"> 로그아웃 </a> </li>
