--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -71,7 +71,7 @@
       <button type="submit"> 등록 </button>
     </form>
 
-     <form role="form" action="/newpw" method="post">
+     <form action="/changepw" method="post">
         <table>
         <thead>
         <tr>
