--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -47,7 +47,7 @@
         <ul class="progressbar">
 
          <% for(var i=0; i<project[0].task.length; i++) { %>
-          <li> <a href=""> <%=i+1%>. <%= project[0].task[i].tname %> </a> </li>
+          <li> <a href=""> <%=i+1%>. <%= project[0].task[i].tname.substr(2) %> </a> </li>
           <!-- if문으로 active 경우 처리해줄것-->
          <% } %>
         </ul>
@@ -63,7 +63,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project[0].task[i]._id%>"> Task # <%= i+1 %> : <%= project[0].task[i].tname %> </a>
+                    <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project[0].task[i]._id%>"> Task # <%= i+1 %> : <%= project[0].task[i].tname.substr(2) %> </a>
                   </h4>
                 </div>
                 <!-- 여길 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in"> 로 해주면 열려있음. 진행중인거 이프문으로 여기 오게! -->
@@ -72,6 +72,7 @@
 
                     산출물 업로드 <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a> <br>
                     산출물 설명 : <input name="desc">
+                    <br><br><br><br>
 
                   </div>
                 </div>
