--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -78,7 +78,7 @@ var taskSchema = new Schema({
   lastupdated: Date
 }); <br>
                     산출물 업로드
-                    <input id="upload-input" type="file" name="uploads[]" multiple="multiple"> <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a> <br>
+                    <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a> <br>
                     산출물 설명 : <input type="text" name="desc">
                     <br><br>
                     <button type="submit" id="<%=project[0].task[i]._id%>">  등록 </button>
