--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -69,14 +69,7 @@
                 <!-- 여길 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in"> 로 해주면 열려있음. 진행중인거 이프문으로 여기 오게.. -->
                 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse">
                   <div class="panel-body">
-var taskSchema = new Schema({
-  tname: String,
-  product: [String],
-  desc: String,
-  deadline: Date,
-  state: String,
-  lastupdated: Date
-}); <br>
+
                     산출물 업로드
                     <a href = ""> <span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span> </a> <br>
                     산출물 설명 : <input type="text" name="desc">
@@ -85,8 +78,8 @@ var taskSchema = new Schema({
                     <br>
                     npm fileupload module test
                     <form ref='upload' id='upload' action='/upload' method='post' encType="multipart/form-data">
-                          <input type="file" name="myfile1" />
-                          
+                          <input type="file" name="myfile1" multiple="multiple"/>
+
                           <input type="hidden" name="tid" value="<%=project[0].task[i]._id %>" />
                           <input type='submit' value='Upload!' />
                     </form>
