--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,6 +23,7 @@
     <script>
     function removeUser(id){
       var result = confirm("사용자를 정말 삭제하시겠습니까?");
+      // 사용자를 삭제해도 그 사용자의 프로젝트는 삭제되지 않음. 다시 바인딩해주면 사용 가능 
       if(result)
       {
         $.ajax({
@@ -71,7 +72,7 @@
       <button type="submit"> 등록 </button>
     </form>
 
-     <form action="/changepw" method="post" float="middle">
+     <form action="" method="post" float="middle">
         <table>
         <thead>
         <tr>
@@ -79,6 +80,7 @@
           <th>이름</th>
           <!--th>비밀번호 재설정</th-->
           <th>사용자 삭제</th>
+
         </tr>
         </thead>
         <tbody>
@@ -88,6 +90,7 @@
             <td> <%= users[i].name %> </td>
             <!--td> <input type="hidden" name="uid" value="<%= users[i]._id %> " > <input type="password" name="pw"> <button type="submit"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </button> </td-->
             <td> <button onclick="removeUser(this.id)"> <span class="glyphicon glyphicon-trash" aria-hidden="true" > </span> </button> </td>
+
           </tr>
          <% } %>
         </tbody>
