--- a/public/common/css/style.css
+++ b/public/common/css/style.css
@@ -181,7 +181,9 @@ img { max-width: 100%; }
 	border-right: 1px solid rgba(255, 255, 255, 0.6);
 }
 
-.input {
+
+
+input {
   display: inline-block;
 }
 
