--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -69,9 +69,8 @@ console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"er
                 <!-- 여길 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in"> 로 해주면 열려있음. 진행중인거 이프문으로 여기 오게.. -->
                 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <form ref='upload' id='upload' action='/upload' method='post' encType="multipart/form-data">
+                    <form ref='upload' id='upload' action='/upload/<%=project[0]._id%>' method='post' encType="multipart/form-data">
                       산출물 업로드: <input type="file" name="<%=project[0].task[i]._id %>" multiple="multiple" />
-                      
                       <input type='submit' value='Upload!' />
                       <!--span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span-->
                     </form>
