--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -62,14 +62,28 @@ console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"er
             <% for(var i=0; i<project[0].task.length; i++) { %>
               <div class="panel panel-default">
                 <div class="panel-heading">
+
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project[0].task[i]._id%>"> Task # <%= i+1 %> : <%= project[0].task[i].tname.substr(2) %> </a>
                   </h4>
                 </div>
+
+                <% if(project[0].task[i].state === "inprogress") { %>
+
                 <!-- 여길 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in"> 로 해주면 열려있음. 진행중인거 이프문으로 여기 오게.. -->
+                <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse in">
+                  <ul>
+<!--                     <% for(var i=0; i<) {%>
+                    <% } %> 여기서부터 다시...... 0822 0554.. -->
+
+                  </ul>
+                <% } else { %>
                 <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse">
+                  <% } %>
+
                   <div class="panel-body">
                     <form ref='upload' id='upload' action='/upload/<%=project[0]._id%>' method='post' encType="multipart/form-data">
+
                       산출물 업로드: <input type="file" name="<%=project[0].task[i]._id %>" multiple="multiple" />
                       <input type='submit' value='Upload!' />
                       <!--span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span-->
