--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -45,8 +45,8 @@
          </div>
          <div id="navbar" class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
-             <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="/dashboard"> <span class="glyphicon glyphicon-tasks" aria-hidden="true" > </span> Dashboard</a></li>
-             <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="/newproject">새 프로젝트</a></li>
+             <li <% if (page_name === 'dashboard') { %>class="active" <% } %> ><a href="/project/dashboard"> <span class="glyphicon glyphicon-tasks" aria-hidden="true" > </span> Dashboard</a></li>
+             <li <% if (page_name === 'newproject') { %>class="active" <% } %>><a href="/project/newproject">새 프로젝트</a></li>
              <li <% if (page_name === 'updateproject') { %>class="active" <% } %>> <a href=""> 프로젝트 수정 </a> </li>
            </ul>
            <ul class="nav navbar-nav navbar-right">
