--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -39,10 +39,10 @@
                 <tr>
                   <td> <%= i+1 %> </td>
                   <td> <%= myprojects[i].pm %> </td>
-                  <td> <a href = "project/<%= myprojects[i]._id %>" > <%= myprojects[i].pname %> </a> </td>
+                  <td> <a href = "<%= myprojects[i]._id %>" > <%= myprojects[i].pname %> </a> </td>
                   <td> <%= myprojects[i].pdesc %> </td>
                   <td> zzz </td> <!-- 진행상황 쓸예정 -->
-                  <td> <a href = "project/update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
+                  <td> <a href = "update/<%= myprojects[i]._id %>"> <span class="glyphicon glyphicon-wrench" aria-hidden="true" > </span> </a>  </td>
 
                 </tr>
                <% } %>
@@ -68,7 +68,7 @@
                 <tr>
                   <td> <%= i+1 %> </td>
                   <td> <%= allprojects[i].pm %> </td>
-                  <td> <a href = "project/<%= allprojects[i]._id %>" > <%= allprojects[i].pname %> </a> </td>
+                  <td> <a href = "<%= allprojects[i]._id %>" > <%= allprojects[i].pname %> </a> </td>
                   <td> <%= allprojects[i].pdesc %> </td>
                   <td> zzz </td> <!-- 진행상황 쓸예정 -->
                 </tr>
