--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -16,32 +16,11 @@
   <link rel="stylesheet" href="common/css/style.css">
 
   <link rel="stylesheet" href="common/css/progressbar.css">
-
-  <!--script>
-  function removeProj(id){
-  var result = confirm("정말 삭제하시겠습니까?");
-  if(result)
-  {
-  $.ajax({
-  url:"/delete/"+id,
-  type:"delete",
-  dataType:"json",
-  success: function(result){
-  location.href="dashboard";
-},
-error:function(request,status,error){
-console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
-}
-});
-}
-}
-
-</script-->
 </head>
 <body>
   <% include ./navbar.ejs %>
   <!-- 기본은 게시판 형태, 산출물 업로드/다운로드가 핵심 -->
-  <h1 style="font-weight:bold;"> <%= project[0].pname %> </h1> <!--h2> <%= project[0].pm %> </h2-->
+  <h1 style="font-weight:bold;"> <%= project[0].pname %> </h1> 
   <br><br>
   <div class="container-fluid" align="right">
     <ul class="progressbar">
@@ -110,7 +89,7 @@ console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"er
                     <!--a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
                     <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br-->
 
-                  </div> <!-- right division -->
+                  </div> <!-- right division --> 
 
                 </div> <!-- div class row -->
               </div> <!-- container-fluid -->
