--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -53,7 +53,7 @@
                 <div class="panel-body">
                 <form ref='upload' id='upload' action='/upload/<%=project[0]._id%>' method='post' encType="multipart/form-data">
 
-                  산출물 업로드: <input type="file" name="<%=project[0].task[i]._id %>" multiple="multiple" />
+                  산출물 업로드: <input type="file" name="<%=project[0].task[i]._id %>" >
                   <input type='submit' value='Upload!' />
                   <!--span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span-->
                 </form>
