--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,7 +55,7 @@
 
                   <% if(project[0].task[i].state==="todo") {} else { %>
                     <ul>
-                      <% for(var j=0; j<product[i][j].length; j++) { %>
+                      <% for(var j=0; j<3; j++) { %>
                         <li> <%= product[i][j] %> </li>
                       <% } %>
                     </ul>
