--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,9 +55,9 @@
 
                   <% if(project[0].task[i].state==="todo") {} else { %>
                     <ul>
-                      <% for(var j=0; j<3; j++) { %>
-                        <li> <%= product[i][j] %> </li>
-                      <% } %>
+
+                        <li> <%= product[i] %> </li>
+
                     </ul>
                     <% } %>
 
