--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -56,7 +56,7 @@
                   <% if(project[0].task[i].state==="todo") {} else { %>
                     <ul>
 
-                        <li> <%= product[i] %> </li>
+                        <!-- <li> <%= product[i] %> </li> -->
 
                     </ul>
                     <% } %>
