--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -55,8 +55,8 @@
 
                   <% if(project[0].task[i].state==="todo") {} else { %>
                     <ul>
-                      ?
-                        <!-- <li> <%= product[i] %> </li> -->
+
+                        <li> <%= project[0].task[i].product[0] %> </li>
 
                     </ul>
                     <% } %>
