--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -22,7 +22,7 @@
   <% include ./navbar.ejs %>
   <!-- 기본은 게시판 형태, 산출물 업로드/다운로드가 핵심 -->
 
-  <h1 style="font-weight:bold;"> <%= project[0].pname %> </h1>
+  <h1 style="font-weight:bold;"> <%= project.pname %> </h1>
   <br><br>
   <div class="container-fluid" align="right">
     <ul class="progressbar">
