--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -27,8 +27,8 @@
   <div class="container-fluid" align="right">
     <ul class="progressbar">
 
-      <% for(var i=0; i<project[0].task.length; i++) { %>
-        <li> <a href=""> <%=i+1%>. <%= project[0].task[i].tname.substr(2) %> </a> </li>
+      <% for(var i=0; i<project.task.length; i++) { %>
+        <li> <a href=""> <%=i+1%>. <%= project.task[i].tname.substr(2) %> </a> </li>
         <% } %>
       </ul>
     </div>
@@ -39,29 +39,29 @@
         <div class="col-md-9">
           <div class="panel-group" id="accordion">
 
-            <% for (var i=0; i<project[0].task.length; i++) { %>
+            <% for (var i=0; i<project.task.length; i++) { %>
             <div class="panel panel-default">
               <div class="panel-heading">
 
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project[0].task[i]._id%>"> Task # <%= (i+1) %> : <%= project[0].task[i].tname.substr(2) %> </a>
+                  <a data-toggle="collapse" data-parent="#accordion" href= "#<%=project.task[i]._id%>"> Task # <%= (i+1) %> : <%= project.task[i].tname.substr(2) %> </a>
                 </h4>
               </div>
-              <div id="<%=project[0].task[i]._id%>" class="panel-collapse collapse">
+              <div id="<%=project.task[i]._id%>" class="panel-collapse collapse">
 
 
                 <div class="panel-body">
-                <form ref='upload' id='upload' action='/upload/<%=project[0]._id%>' method='post' encType="multipart/form-data">
+                <form ref='upload' id='upload' action='/upload/<%=project._id%>' method='post' encType="multipart/form-data">
 
-                  <% if(project[0].task[i].state==="todo") {} else { %>
+                  <% if(project.task[i].state==="todo") {} else { %>
                     <ul>
 
-                        <li> <%= project[0].task[i].product[0] %> </li>
+                        <li> <%= project.task[i].product[0] %> </li>
 
                     </ul>
                     <% } %>
 
-                  산출물 업로드: <input type="file" name="<%=project[0].task[i]._id %>" >
+                  산출물 업로드: <input type="file" name="<%=project.task[i]._id %>" >
                   <input type='submit' value='Upload!' />
                   <!--span class="glyphicon glyphicon-paperclip" aria-hidden="true" > </span-->
                 </form>
@@ -75,15 +75,15 @@
         <div class="col-md-3">
 
           <h3> 프로젝트 개요 </h3>
-          <p> <%= project[0].pdesc %> </p>
-          <p> <%= project[0].bp[0] %> </p>
+          <p> <%= project.pdesc %> </p>
+          <p> <%= project.bp[0] %> </p>
 
-          <% if(name === 'Admin' | name === project[0].pm  ) { %>
-            <a href="/project/update/<%=project[0]._id %>"> 수정 </a> <br>
-            <a href="/project/delete/<%=project[0]._id %>"> 삭제 </a> <br>
+          <% if(name === 'Admin' | name === project.pm  ) { %>
+            <a href="/project/update/<%=project._id %>"> 수정 </a> <br>
+            <a href="/project/delete/<%=project._id %>"> 삭제 </a> <br>
           <% } %>
-          <!--a href="/update/<%=project[0]._id %>"> 수정 </a> <br>
-          <a href="/delete/<%=project[0]._id %>"> 삭제 </a> <br-->
+          <!--a href="/update/<%=project._id %>"> 수정 </a> <br>
+          <a href="/delete/<%=project._id %>"> 삭제 </a> <br-->
 
         </div> <!-- right division -->
 
