--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -56,7 +56,7 @@
                   <% if(project.task[i].state==="todo") {} else { %>
                     <ul>
 
-                        <li> <%= project.task[i].product %> </li>
+                        <li> <%= project.task[i].product[0] %> </li>
 
                     </ul>
                     <% } %>
