--- a/views/project1.ejs
+++ b/views/project1.ejs
@@ -54,7 +54,8 @@
                 <form ref='upload' id='upload' action='/upload/<%=project._id%>' method='post' encType="multipart/form-data">
 
                   <% if(project.task[i].state==="todo") {} else { %>
-                    <ul>
+                    <p style="font-weight: 100"> 등록된 산출물  </p>
+                    <ul style="text-align:left;">
                       <% for (var j=0; j<project.task[i].product.length; j++) { %>
                         <li> <%= project.task[i].product[j] %> </li>
                       <% } %>
